Fix the spacing

--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,3 @@
-@-moz-viewport { width: device-width; scale: 1; }
-@-ms-viewport { width: device-width; scale: 1; }
-@-o-viewport { width: device-width; scale: 1; }
-@-webkit-viewport { width: device-width; scale: 1; }
-@viewport { width: device-width; scale: 1; }
 
 html {
   background-color: #003f78;
@@ -15,7 +10,6 @@ p, h1 {
 
 p {
   font-family: "Patrick Hand SC", cursive;
-
 }
 
 h1 {
@@ -23,10 +17,10 @@ h1 {
 }
 
 .border {
-    border-top: 2px solid #deb859;
-    border-width: medium;
-    padding-top: 10px;
-    margin-top: 10px;
+  border-top: 2px solid #deb859;
+  border-width: medium;
+  padding-top: 10px;
+  margin-top: 10px;
 }
 
 .border-bottom {
